<resources>
    <string name="app_name">MyApp4_Calculadora_Simple</string>
    <string name="txt_valor1">Primer Valor</string>
    <string name="txt_valor2">Segundo Valor</string>
    <string name="boton_sumar">Sumar</string>
    <string name="boton_restar">Restar</string>
    <string name="boton_multiplicar">Multiplicar</string>
    <string name="boton_diviir">Dividir</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
</resources>